tests/codegen/compile/runtime/fail/non_async.rs
use rust_liveview::runtime;

#[runtime::main(async_std)]
fn main() {}
