tests/codegen/compile/runtime/fail/non_async.stderr
error: Only async functions are supported
 --> $DIR/non_async.rs:4:1
  |
4 | fn main() {}
  | ^^
  |
  = help: Consider writing the signature as:
          
          async fn main ()
